[gd_scene load_steps=23 format=3 uid="uid://duy8jpg78tkkl"]

[ext_resource type="Script" uid="uid://jc056cm4kp3m" path="res://scripts/player_stuff/player.gd" id="1_qhqgy"]
[ext_resource type="Texture2D" uid="uid://ckcwdclc223qp" path="res://assets/m_shadow.png" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://dtdd42av6pgkk" path="res://assets/Full_Main_Spreadsheet.png" id="3_lvxji"]
[ext_resource type="PackedScene" uid="uid://dyj81hojync2q" path="res://scenes/player/gun.tscn" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://bsvky0v50hmu2" path="res://scripts/health.gd" id="5_p47bc"]
[ext_resource type="AudioStream" uid="uid://bcsgocxq6wx21" path="res://assets/sounds/sfx/dash_sfx.mp3" id="6_75vfm"]
[ext_resource type="AudioStream" uid="uid://cittv6644sbwe" path="res://assets/sounds/sfx/footsteps.mp3" id="7_0owmy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 7.0

[sub_resource type="Animation" id="Animation_g2els"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "idle_down"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "idle_left"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "idle_right"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "idle_up"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
resource_name = "run_down"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "run_left"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "run_right"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_y4r1p"]
resource_name = "run_up"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2wvv"]
_data = {
&"RESET": SubResource("Animation_g2els"),
&"idle_down": SubResource("Animation_qlg0r"),
&"idle_left": SubResource("Animation_dqkch"),
&"idle_right": SubResource("Animation_qhqgy"),
&"idle_up": SubResource("Animation_tuyoq"),
&"run_down": SubResource("Animation_ur7pv"),
&"run_left": SubResource("Animation_smehm"),
&"run_right": SubResource("Animation_fjrip"),
&"run_up": SubResource("Animation_y4r1p")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhqgy"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqkch"]
bg_color = Color(0.160393, 1, 0, 1)
border_color = Color(1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_0owmy"]
offsets = PackedFloat32Array(0.23301, 0.325243, 0.621359)
colors = PackedColorArray(0.394316, 0.561098, 0.3359, 1, 0.291435, 0.442296, 0.221948, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dqkch"]
gradient = SubResource("Gradient_0owmy")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_qhqgy")

[node name="MShadow" type="Sprite2D" parent="."]
position = Vector2(-1, -2)
texture = ExtResource("2_dqkch")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("3_lvxji")
hframes = 8
vframes = 9

[node name="Gun" parent="." instance=ExtResource("3_qhqgy")]
position = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_qhqgy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d2wvv")
}
autoplay = "idle_up"

[node name="Health" type="ProgressBar" parent="."]
texture_filter = 1
texture_repeat = 1
offset_left = -8.0
offset_top = -19.0
offset_right = 7.0
offset_bottom = -17.0
theme_override_styles/background = SubResource("StyleBoxFlat_qhqgy")
theme_override_styles/fill = SubResource("StyleBoxFlat_dqkch")
step = 10.0
value = 100.0
rounded = true
show_percentage = false
script = ExtResource("5_p47bc")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -7)
texture = SubResource("GradientTexture2D_dqkch")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Dash_CoolDown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Dash_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_75vfm")
volume_db = -22.0
pitch_scale = 0.9
bus = &"sfx"

[node name="Footsteps_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_0owmy")
autoplay = true
bus = &"sfx"
parameters/looping = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Dash_CoolDown" to="." method="_on_dash_cool_down_timeout"]
